 _____________________________________________________________________________
 
   Version 1.3.12
 _____________________________________________________________________________

 - Pawn generation changes to avoid apparel generation issues and to work
   around problems in other mods when generating a pawn with no faction.

 _____________________________________________________________________________
 
   Version 1.3.11
 _____________________________________________________________________________

 - Fixed issue with missing relationships when loading presets.
 - Fixed apparel for alien race mods where the alien race uses restricted
   apparel.
 
 _____________________________________________________________________________
 
   Version 1.3.10
 _____________________________________________________________________________

 - Fixed a compatibility issue with the Psychology mod.
 - Fixed issue with missing relationships when loading presets.

 _____________________________________________________________________________
 
   Version 1.3.9
 _____________________________________________________________________________

 - Reworked the user interface to consist of scrolling columns so that more
   content panels can be included.
 - Added an Ideoligion panel when the Ideology expansion is enabled.
   - Select from the ideoligions available in the world.
   - Configure the pawn's ideoligion certainty value.
   - After saving a preset where pawns have an ideoligion different from that
     of the colony, we will attempt to find a similar ideoligion when loading
     that preset by looking at the ideoligion's culture and memes.
   - When loading a single pawn, it will always be assigned to the ideoligion
     of the colony
 - Added an error message if you are running a version of RimWorld less than
   the version required by the mod.
 - Fixed some hediffs related to Psylink abilities.
 - Fixed an issue where a character's head graphics were broken when loading